--- a/src/modules/favorites/_favorites.scss
+++ b/src/modules/favorites/_favorites.scss
@@ -1,10 +1,9 @@
 .favorites {
   &__in {
-    display: flex;
-    gap: 40px;
-    flex-wrap: wrap;
-    justify-content: space-between;
     align-items: flex-start;
+    display: grid;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    gap: 20px 10px;
   }
 
   &__empty {
