fix: change hints behavior to links

--- a/src/modules/searchHint/_searchHint.scss
+++ b/src/modules/searchHint/_searchHint.scss
@@ -3,6 +3,7 @@
   background-color: var(--plate-color);
   border-radius: 8px;
   margin-right: 8px;
+  text-decoration: none;
   &__title {
     background: linear-gradient(93deg, #DA15B8 4.93%, #8D06CC 100%);
     background-clip: text;
