--- a/src/modules/searchPage/_searchpage.scss
+++ b/src/modules/searchPage/_searchpage.scss
@@ -14,15 +14,15 @@
   }
   &__input {
     width: 100%;
-    font-family: system;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 30px;
     font-style: normal;
     font-weight: 450;
-    line-height: 32px; /* 106.667% */
+    line-height: 38px; /* 106.667% */
     letter-spacing: -0.3px;
     border: 2px solid var(--key-color);
     border-radius: 16px;
-    padding: 11px 60px 16px 60px;
+    padding: 6px 60px 12px 60px;
     &:focus {
       outline: 1px solid var(--key-color-dark);
     }
@@ -31,7 +31,7 @@
       font-size: 30px;
       font-style: normal;
       font-weight: 550;
-      color: #D1D1F04D;
+      color: #E6E1EF;
     }
   }
   &__search-wrapper {
